[fixed] url spacing

--- a/src/App.css
+++ b/src/App.css
@@ -7,19 +7,9 @@ main {
   hyphens: auto;
   line-height: 1.65;
   margin: 0 auto;
-  max-width: 680px;
+  max-width: 80vw;
   min-height: 100vh;
-  padding: 72px 0;
   text-align: center;
-}
-h1 {
-  font-size: 45px;
-}
-h2 {
-  margin-top: 1.5em;
-}
-p {
-  font-size: 16px;
 }
 a {
   border-bottom: 1px solid white;
