--- a/src/components/doc.css
+++ b/src/components/doc.css
@@ -1,5 +1,11 @@
 .links-list {
-    list-style-type: none
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.links-list li {
+    width: 100%;
 }
 
 .doc-update {
